fix footer alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -38,9 +38,7 @@ h1 {
   align-items: center;
 }
 
-footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+footer p{
+  text-align: center;
 }
 
